# smart24

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  coucou les loulous  docker-compose.yml  flake.nix  glims_points.dbf  glims_points.shp  glims_points.shx  glims_pointsn.shx  package-lock.json  package.json  requirements.txt  test.lua
.github/workflows/: 2pdf.yml  blank.yml  client.yml  server.yml
DOI-WGMS-FoG-2024-01/: datapackage.yml  readme.md
DOI-WGMS-FoG-2024-01/data/: state.csv
apps/client/: package.json  (+2 more)
glaciers_vulgarisation/: README.md  exe
map/: app.py  volcano_db.csv
models/: user.ts
notebooks/: 10_volume_derivative.ipynb  1_simulation_epaisseur_temperatures.ipynb  2_evolution_mass_balance_glacier.ipynb  3_ela_computation.ipynb  4_volume_animation.ipynb  5_correlations.ipynb  6_clean_animation.ipynb  7_2_map_glacier_dash.py  7_map de glacier.ipynb  7_sea_level_animation.ipynb  8_piscines_olympiques.ipynb  9_save_volume_predictions.ipynb  rgitopo_rgi7.ipynb  sandbox.ipynb
rendu/: presentation.tex
scripts/: .env.template  fact-check-messages-grade1.csv  fact-checked-posts.csv  populate-db.py  posts.csv  requirements.txt  test-algos.ipynb  users.csv
smartshare/: Cargo.toml
smartshare/examples/: echo.rs
smartshare/src/: file.rs  lib.rs
smartshare/src/client/: client.rs  ide.rs  main.rs  server.rs
smartshare/src/protocol/: codec.rs  mod.rs  msg.rs
smartshare/src/server/: client.rs  main.rs  server.rs
smartshare_protocol/: Cargo.toml
smartshare_protocol/examples/: echo.rs
smartshare_protocol/src/: codec.rs  lib.rs  msg.rs
(+195 files in other folders)
