[package]
name = "smartshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
futures = "0.3.30"
futures-sink = "0.3.30"
tokio = { version = "1.37.0", features = ["net", "io-util", "io-std", "full"] }
tower = "0.4.13"
tokio-serde = { version = "0.9.0", features = ["json"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.10", features = ["codec"] }
serde = { version = "1.0.198", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
